dnl Process this file with autoconf to produce a configure script.
AC_INIT(mgr/mgr.c)
AC_CONFIG_HEADER(config.h)
AC_CONFIG_AUX_DIR(scripts)

dnl Checks for host type
AC_CANONICAL_HOST

dnl Check if we need extra compiler flags for this arch
dnl   Not really sure what the right flags are for alphas
dnl   These are ok for alpha/linux/gcc, but maybe not for anything else...
AC_MSG_CHECKING(whether we need to add some compile flags for $host_cpu)
if test x$host_cpu = xalphaev6; then
	dnl PVFS_ARCH_CFLAGS="-mno-fp-regs -ffixed-8 -mcpu=ev5 -Wa,-mev6 $CFLAGS"
	dnl PVFS_ARCH_CFLAGS="-mno-fp-regs -ffixed-8 -mcpu=ev6 $CFLAGS"
	AC_MSG_RESULT(yes)
elif test x$host_cpu = xalphaev5; then
	dnl PVFS_ARCH_CFLAGS="-mno-fp-regs -ffixed-8 -mcpu=ev5 $CFLAGS"
	PVFS_ARCH_CFLAGS="-fomit-frame-pointer -fno-strict-aliasing -pipe \
	-mno-fp-regs -ffixed-8 -mcpu=ev5 -Wa,-mev5"
	AC_MSG_RESULT(yes)
else
	AC_MSG_RESULT(no)
fi
dnl AC_SUBST(PVFS_ARCH_CFLAGS)
CFLAGS="$PVFS_ARCH_CFLAGS $CFLAGS"

dnl Get __ALPHA__ defined if need be as well
if test x$host_cpu = xalphaev6 -o x$host_cpu = xalphaev5; then
	AC_DEFINE(__ALPHA__, 1, Define if running on Linux/Alpha)
fi

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -lpvfs:
AC_CHECK_LIB(pvfs, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h sys/file.h sys/ioctl.h sys/time.h unistd.h)
AC_CHECK_HEADERS(features.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_BLKSIZE
AC_STRUCT_ST_BLOCKS
AC_STRUCT_ST_RDEV
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS(gettimeofday select socket strerror strtol)

AC_OUTPUT(include/Makefile mgr/Makefile shared/Makefile lib/Makefile docs/Makefile mgr/meta/Makefile iod/Makefile examples/Makefile utils/Makefile Makefile lib/mdbi/Makefile )

